Donut Launcher-Imported/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/716Techs/2024%20Stuff/Donut%20Launcher-Imported/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
In file included from C:\Users\716Techs\.gradle\caches\transforms-3\445d96a793001fa5a8ca3afb6943843e\transformed\wpimath-cpp-2024.2.1-headers/units/angle.h:29,
                 from C:\Users\716Techs\.gradle\caches\transforms-3\445d96a793001fa5a8ca3afb6943843e\transformed\wpimath-cpp-2024.2.1-headers/units/math.h:31,
                 from C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/TimedRobot.h:12,
                 from C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\include/Robot.h:11,
                 from C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\cpp\Robot.cpp:7:
C:\Users\716Techs\.gradle\caches\transforms-3\445d96a793001fa5a8ca3afb6943843e\transformed\wpimath-cpp-2024.2.1-headers/units/base.h: In instantiation of 'constexpr T units::convert(const T&) [with UnitFrom = unit<std::ratio<1>, base_unit<std::ratio<0, 1>, std::ratio<0, 1>, std::ratio<1> > >; UnitTo = unit<std::ratio<1>, base_unit<> >; T = double]':
C:\Users\716Techs\.gradle\caches\transforms-3\445d96a793001fa5a8ca3afb6943843e\transformed\wpimath-cpp-2024.2.1-headers/units/base.h:2004:41:   required from 'constexpr units::unit_t<Units, T, NonLinearScale>::unit_t(const units::unit_t<UnitsRhs, Ty, NlsRhs>&) [with UnitsRhs = units::unit<std::ratio<1>, units::base_unit<std::ratio<0, 1>, std::ratio<0, 1>, std::ratio<1> > >; Ty = double; NlsRhs = units::linear_scale; Units = units::unit<std::ratio<1>, units::base_unit<> >; T = double; NonLinearScale = units::linear_scale]'
C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\cpp\Robot.cpp:166:28:   required from here
C:\Users\716Techs\.gradle\caches\transforms-3\445d96a793001fa5a8ca3afb6943843e\transformed\wpimath-cpp-2024.2.1-headers/units/base.h:1664:78: error: static assertion failed: Units are not compatible.
 1664 |                 static_assert(traits::is_convertible_unit<UnitFrom, UnitTo>::value, "Units are not compatible.");
      |                                                                              ^~~~~
C:\Users\716Techs\.gradle\caches\transforms-3\445d96a793001fa5a8ca3afb6943843e\transformed\wpimath-cpp-2024.2.1-headers/units/base.h:1664:78: note: 'std::integral_constant<bool, false>::value' evaluates to false
In file included from C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/IterativeRobotBase.h:9,
                 from C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/TimedRobot.h:16:
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/RobotBase.h: In instantiation of 'void frc::impl::RunRobot(wpi::mutex&, Robot**) [with Robot = Robot; wpi::mutex = wpi::priority_mutex]':
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/RobotBase.h:69:30:   required from 'int frc::StartRobot() [with Robot = Robot]'
C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\cpp\Robot.cpp:220:32:   required from here
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/RobotBase.h:31:18: error: use of deleted function 'Robot::Robot()'
   31 |     static Robot theRobot;
      |                  ^~~~~~~~
C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\include/Robot.h:30:7: note: 'Robot::Robot()' is implicitly deleted because the default definition would be ill-formed:
   30 | class Robot : public frc::TimedRobot {
      |       ^~~~~
C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\include/Robot.h:30:7: error: no matching function for call to 'frc::Compressor::Compressor()'
In file included from C:\Users\716Techs\2024 Stuff\Donut Launcher-Imported\src\main\include/Robot.h:23:
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/Compressor.h:57:3: note: candidate: 'frc::Compressor::Compressor(frc::Compressor&&)'
   57 |   Compressor(Compressor&&) = default;
      |   ^~~~~~~~~~
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/Compressor.h:57:3: note:   candidate expects 1 argument, 0 provided
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/Compressor.h:50:12: note: candidate: 'frc::Compressor::Compressor(frc::PneumaticsModuleType)'
   50 |   explicit Compressor(PneumaticsModuleType moduleType);
      |            ^~~~~~~~~~
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/Compressor.h:50:12: note:   candidate expects 1 argument, 0 provided
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/Compressor.h:43:3: note: candidate: 'frc::Compressor::Compressor(int, frc::PneumaticsModuleType)'
   43 |   Compressor(int module, PneumaticsModuleType moduleType);
      |   ^~~~~~~~~~
C:\Users\716Techs\.gradle\caches\transforms-3\d9794be3e9f1e7c9af7a35bcee988673\transformed\wpilibc-cpp-2024.2.1-headers/frc/Compressor.h:43:3: note:   candidate expects 2 arguments, 0 provided

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/716Techs/2024%20Stuff/Donut%20Launcher-Imported/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
